native/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-kit-gateway
spec:
  selector: { app: microservice-kit-gateway }
  ports:
    - { name: http, port: 80, targetPort: http }
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-kit-iam
spec:
  selector: { app: microservice-kit-iam }
  ports:
    - { name: http, port: 9010, targetPort: http }
    - { name: grpc, port: 9110, targetPort: grpc }
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-kit-sys
spec:
  selector: { app: microservice-kit-sys }
  ports:
    - { name: http, port: 9011, targetPort: http }
    - { name: grpc, port: 9111, targetPort: grpc }
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-kit-resource
spec:
  selector: { app: microservice-kit-resource }
  ports:
    - { name: http, port: 9012, targetPort: http }
    - { name: grpc, port: 9112, targetPort: grpc }
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-kit-consul
spec:
  selector: { app: microservice-kit-consul }
  ports:
    - { name: http, port: 8500, targetPort: http }
    - { name: server, port: 8300, targetPort: server }
    - { name: serf-lan, port: 8301, targetPort: serf-lan }
